fixing the background so it doesn't stretch across the screen

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ h1, p {
   color: green;
   background-color: rgba(128, 128, 128, 0.5);
   padding: 10px;
+  display: inline-block;
 }
 
 h1 {
